still get 404 not found for get bookmarks which conflicts nginx
